--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: sh -c "./node_modules/.bin/prisma migrate deploy && node server.js"
+    command: sh -c "node node_modules/prisma/build/index.js migrate deploy && node server.js"
 
 volumes:
   postgres_data:
