Remove runtime Prisma commands and ensure client generation
- Generate Prisma Client during build; copy prisma schema/config before generate
- Simplify runtime image: drop Prisma CLI deps; keep generated client only
- Start container with node server.js (no migrate on startup)
- Update README: run prisma migrate manually from host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: sh -c "npx --yes prisma@7.1.0 migrate deploy && node server.js"
+    command: sh -c "node server.js"
 
 volumes:
   postgres_data:
