--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^7.1.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "bcryptjs": "^3.0.2",
     "next": "16.0.7",
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
